--- a/.github/workflows/Publish-Package.yml
+++ b/.github/workflows/Publish-Package.yml
@@ -1,5 +1,7 @@
 name: Publish the code in the main branch to github packages
-on: push
+on:
+  workflow_dispatch: 
+
 jobs:
   publish:
     runs-on: ubuntu-latest
