--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <distributionManagement>
     <repository>
       <id>github</id>
-      <name>Genesis core library package</name>
+      <name>Github Packages</name>
       <url>https://maven.pkg.github.com/kunalbiswas92/Genesis-Core-Library</url>
     </repository>
   </distributionManagement>
