--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,6 @@
 # Set log levels
-rootLogger.level = debug
+rootLogger.level = INFO, console
+logger.APIHelper=DEBUG
 
 # Define appenders
 appender.console.type = Console
