--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
       <artifactId>json-schema-validator</artifactId>
       <version>5.4.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.azure/azure-security-keyvault-secrets -->
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-security-keyvault-secrets</artifactId>
+      <version>4.8.6</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -141,8 +147,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
     </plugins>
