--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.NewDay</groupId>
-  <artifactId>genesis-core-library</artifactId>
+  <artifactId>genesiscorelibrary</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -18,7 +18,7 @@
     <repository>
       <id>github</id>
       <name>Github Packages</name>
-      <url>https://maven.pkg.github.com/SDETThings/Genesis-Core-Library</url>
+      <url>https://maven.pkg.github.com/SDETThings/Genesis-Core-Library/</url>
     </repository>
   </distributionManagement>
 
